created demo using ai article

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory: c:\\Users\\Rian\\Desktop\\GitHub\\rag-test\n",
-      "API key found: \n"
+      "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\n"
      ]
     }
    ],
@@ -18,14 +17,93 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
-    "print(\"Current working directory:\", os.getcwd())  # This will show where Python is looking for the .env file\n",
-    "load_dotenv()  # Load environment variables from .env file\n",
-    "api_key = os.getenv(\"LANGSMITH_API_KEY\")\n",
+    "api_key = os.environ[\"LANGSMITH_API_KEY\"]\n",
     "\n",
-    "if api_key is None:\n",
-    "    print(\"API key not found in environment variables\")\n",
-    "else:\n",
-    "    print(\"API key found:\", api_key)"
+    "print(api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The key components of an AI agent, according to the blog post, include Planning and Task Decomposition. Planning involves understanding the various steps required for a complicated task and preparing for them in advance. Task Decomposition utilizes the Chain of Thought (CoT) prompting technique to break down complex tasks into smaller, more manageable steps, enhancing the model's performance and providing insight into the model’s thought process.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import bs4\n",
+    "from langchain import hub\n",
+    "from langchain_community.document_loaders import WebBaseLoader\n",
+    "from langchain_core.documents import Document\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from langgraph.graph import START, StateGraph\n",
+    "from typing_extensions import List, TypedDict\n",
+    "from dotenv import load_dotenv\n",
+    "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
+    "from langchain_community.vectorstores import Chroma\n",
+    "\n",
+    "# fetch the api key from the environment variables\n",
+    "api_key = os.environ[\"OPENAI_API_KEY\"]\n",
+    "\n",
+    "# Set OpenAI API Key (ensure you have an API key set in env variables)\n",
+    "os.environ[\"OPENAI_API_KEY\"] = api_key\n",
+    "\n",
+    "# Load and chunk contents of the blog\n",
+    "loader = WebBaseLoader(\n",
+    "    web_paths=(\"https://lilianweng.github.io/posts/2023-06-23-agent/\",),\n",
+    "    bs_kwargs=dict(\n",
+    "        parse_only=bs4.SoupStrainer(\n",
+    "            class_=(\"post-content\", \"post-title\", \"post-header\")\n",
+    "        )\n",
+    "    ),\n",
+    ")\n",
+    "docs = loader.load()\n",
+    "\n",
+    "# Split text into smaller chunks\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+    "all_splits = text_splitter.split_documents(docs)\n",
+    "\n",
+    "# Initialize OpenAI embeddings and ChromaDB\n",
+    "embedding_model = OpenAIEmbeddings()\n",
+    "vector_store = Chroma.from_documents(all_splits, embedding_model)\n",
+    "\n",
+    "# Define prompt for question-answering\n",
+    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+    "\n",
+    "# Initialize OpenAI Chat Model\n",
+    "llm = ChatOpenAI(model=\"gpt-4-turbo\", temperature=0)\n",
+    "\n",
+    "# Define state for application\n",
+    "class State(TypedDict):\n",
+    "    question: str\n",
+    "    context: List[Document]\n",
+    "    answer: str\n",
+    "\n",
+    "# Define application steps\n",
+    "def retrieve(state: State):\n",
+    "    retrieved_docs = vector_store.similarity_search(state[\"question\"])\n",
+    "    return {\"context\": retrieved_docs}\n",
+    "\n",
+    "def generate(state: State):\n",
+    "    docs_content = \"\\n\\n\".join(doc.page_content for doc in state[\"context\"])\n",
+    "    messages = prompt.invoke({\"question\": state[\"question\"], \"context\": docs_content})\n",
+    "    response = llm.invoke(messages)\n",
+    "    return {\"answer\": response.content}\n",
+    "\n",
+    "# Compile application and test\n",
+    "graph_builder = StateGraph(State).add_sequence([retrieve, generate])\n",
+    "graph_builder.add_edge(START, \"retrieve\")\n",
+    "graph = graph_builder.compile()\n",
+    "\n",
+    "question = \"What are the key components of an AI agent according to the blog post?\"\n",
+    "result = graph.invoke({\"question\": question})\n",
+    "print(result[\"answer\"])"
    ]
   }
  ],
