removed langchain key

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,36 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
      ]
-    }
-   ],
-   "source": [
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "\n",
-    "api_key = os.environ[\"LANGSMITH_API_KEY\"]\n",
-    "\n",
-    "print(api_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The key components of an AI agent, according to the blog post, include Planning and Task Decomposition. Planning involves understanding the various steps required for a complicated task and preparing for them in advance. Task Decomposition utilizes the Chain of Thought (CoT) prompting technique to break down complex tasks into smaller, more manageable steps, enhancing the model's performance and providing insight into the model’s thought process.\n"
+      "The key components of an AI agent, according to the blog post, include Planning, Task Decomposition, and API Tool Use Capabilities. Planning involves understanding and planning ahead for complex tasks. Task Decomposition uses the Chain of Thought technique to break down complex tasks into simpler steps, and API Tool Use Capabilities are evaluated at three levels: the ability to call, retrieve, and plan API usage beyond simple retrieval and calling.\n"
      ]
     }
    ],
